--- a/Cornel/index3.html
+++ b/Cornel/index3.html
@@ -10,9 +10,9 @@
 <div>one
 
     <span>one
-        <p>one</p>
-        <p>two</p>
-        <p>three</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos doloremque impedit optio voluptatibus veritatis velit dolorum suscipit exercitationem, recusandae sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestias velit perferendis dolores possimus saepe placeat molestiae excepturi vero illum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dignissimos in maxime voluptas temporibus. Laborum accusamus voluptatum ratione iure nobis molestias eius excepturi necessitatibus cum animi minima, alias commodi quae.</p>
     </span>
 </div>
 
