--- a/Cornel/index3.html
+++ b/Cornel/index3.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     
-<div>one
+<div>
 
-    <span>one
+    <span>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos doloremque impedit optio voluptatibus veritatis velit dolorum suscipit exercitationem, recusandae sapiente.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestias velit perferendis dolores possimus saepe placeat molestiae excepturi vero illum.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dignissimos in maxime voluptas temporibus. Laborum accusamus voluptatum ratione iure nobis molestias eius excepturi necessitatibus cum animi minima, alias commodi quae.</p>
@@ -17,10 +17,23 @@
 </div>
 
 
-<div></div>
-<div></div>
-<div></div>
-<div></div>
+<div>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ab laborum enim aperiam ad autem dolorem aliquid velit aliquam nulla, dicta obcaecati natus nemo mollitia quidem facilis tempore nesciunt voluptas officiis a similique? Tempore enim magni soluta minus, sapiente est.
+</div>
+<div>
+    <span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, reprehenderit!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, amet.</p>
+    </span>
+</div>
+<div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum iure, voluptatibus nisi esse harum repudiandae rerum magni, atque voluptatem nostrum laboriosam nesciunt? Tempora illo corrupti doloribus fuga dolore culpa nemo harum, corporis aut recusandae! Atque veritatis consequatur soluta ducimus, illo, ex cum quasi exercitationem voluptatum illum temporibus quas, qui quod!</p>
+</div>
+<div>
+    <span>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut autem, sunt, totam accusamus inventore qui enim accusantium pariatur doloribus nobis eum, eius temporibus non velit. Vel, magnam? Delectus saepe soluta aliquid atque est aperiam quae! Ea commodi quod ducimus doloremque!
+    </span>
+</div>
 
 
 </body>
