--- a/kathi/exercise4.html
+++ b/kathi/exercise4.html
@@ -8,26 +8,52 @@
 </head>
 
 <body>
-    <div>
-        Puppe <span>(von Rammstein)</span>
-    </div>
 
-    <div>
-        Wenn Schwesterlein zur Arbeit muss Schließt mich im Zimmer ein Hat eine Puppe mir geschenkt Dann bin ich nicht allein Wenn Schwesterlein zur Arbeit muss Fährt sie nicht mit der Bahn Ihr Schaffensplatz ist gar nicht weit Ist gleich im Zimmer nebenan
-    </div>
-    <div>
-        Am Himmel dunkle Wolken ziehen Ich nehme artig meine Medizin Und warte hier im Daunenbett Bis die Sonne untergeht
-    </div>
-    <div>
-        Sie kommen und sie gehen Und manchmal auch zu zweit Die späten Vögel singen Und die Schwester schreit
-    </div>
-    <div>
-        Am Himmel dunkle Wolken ziehen Ich nehme artig meine Medizin Und warte hier im Daunenbett Bis die Sonne untergeht
-    </div>
-    <div>
-        Und dann reiß' ich der Puppe den Kopf ab Dann reiß' ich der Puppe den Kopf ab Ja, ich beiß' der Puppe den Hals ab Es geht mir nicht gut Ich reiß' der Puppe den Kopf ab Ja, ich reiß' der Puppe den Kopf ab Und dann beiß' ich der Puppe den Hals ab Es geht
-        mir nicht gut, nein!
-    </div>
+    <h1>Puppe <span>(von Rammstein)</span></h1>
+
+    <span>
+        <div>Wenn Schwesterlein zur Arbeit muss</div>
+        <div>Schließt mich im Zimmer ein</div>
+        <div>eine Puppe mir geschenkt</div>
+        <div>Dann bin ich nicht allein</div>
+        <div>Wenn Schwesterlein zur Arbeit muss</div>
+        <div>Fährt sie nicht mit der Bahn</div>
+        <div>Ihr Schaffensplatz ist gar nicht weit</div>
+        <div>Ist gleich im Zimmer nebenan</div>
+    </span>
+    <br>
+    <span>
+        <div>Am Himmel dunkle Wolken ziehen</div>
+        <div>Ich nehme artig meine Medizin</div>
+        <div>Und warte hier im Daunenbett</div>
+        <div>Bis die Sonne untergeht</div>           
+    </span>
+    <br>
+    <span>
+        <div>Sie kommen und sie gehen</div>
+        <div>Und manchmal auch zu zweit</div>
+        <div>Die späten Vögel singen</div>
+        <div>Und die Schwester schreit</div>           
+    </span>
+    <br>
+    <span>
+        <div>Am Himmel dunkle Wolken ziehen</div>
+        <div>Ich nehme artig meine Medizin</div>
+        <div>Und warte hier im Daunenbett</div>
+        <div>Bis die Sonne untergeht</div>           
+    </span>
+    <br>
+    <span>
+        <div>Und dann reiß' ich der Puppe den Kopf ab</div>
+        <div>Dann reiß' ich der Puppe den Kopf ab</div>
+        <div>Ja, ich beiß' der Puppe den Hals ab</div>
+        <div>Es geht mir nicht gut</div>
+        <div>Ich reiß' der Puppe den Kopf ab</div>
+        <div>Ja, ich reiß' der Puppe den Kopf ab</div>
+        <div>Und dann beiß' ich der Puppe den Hals ab</div>
+        <div>Es geht mir nicht gut, nein!</div>              
+    </span>
+    <br>
     <div>
         Dam dam
     </div>
@@ -37,13 +63,25 @@
     <div>
         Dam dam
     </div>
-    <div>
-        Wenn Schwesterlein der Arbeit frönt Das Licht im Fenster rot Ich sehe zu durchs Schlüsselloch Und einer schlug sie tot Und jetzt reiß' ich der Puppe den Kopf ab Ja, ich reiß' der Puppe den Kopf ab Und dann beiß' ich der Puppe den Hals ab Jetzt geht es
-        mir gut, ja!
-    </div>
-    <div>
-        Ich reiße der Puppe den Kopf ab Ja, ich reiß' der Puppe den Kopf ab Und jetzt beiß' ich der Puppe den Hals ab Es geht mir sehr gut, ja!
-    </div>
+    <br>
+    <span>
+        <div>Wenn Schwesterlein der Arbeit frönt</div>
+        <div>Das Licht im Fenster rot</div>
+        <div>Ich sehe zu durchs Schlüsselloch</div>
+        <div>Und einer schlug sie tot</div>
+        <div>Und jetzt reiß' ich der Puppe den Kopf ab</div>
+        <div>Ja, ich reiß' der Puppe den Kopf ab</div>
+        <div>Und dann beiß' ich der Puppe den Hals ab</div>
+        <div>Jetzt geht es mir gut, ja!</div>               
+    </span>
+    <br>
+    <span>
+        <div>Ich reiße der Puppe den Kopf ab</div>
+        <div>Ja, ich reiß' der Puppe den Kopf ab</div>
+        <div>Und jetzt beiß' ich der Puppe den Hals ab</div>
+        <div>Es geht mir sehr gut, ja!</div>          
+    </span>
+    <br>
     <div>
         Dam dam
     </div>
