--- a/Cornel/index5.html
+++ b/Cornel/index5.html
@@ -6,7 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <input type = "text" value = "enter your username"/>
-    <input type = "password"/>  
+    Enter your username: 
+    <input type = "text"/>
+    <br><br>
+    Enter your password:
+    <input type = "password"/> 
+    
+    Repeat your password:
+    <input type = "password"/> 
+<br><br><br>
+    Please enter your skills:
+    <br>
+    Html
+    <input type="checkbox">
+    Css
+    <input type="checkbox">
+    Java
+    <input type="checkbox">
+    Javascript
+    <input type="checkbox">
+
 </body>
 </html>
