--- a/Cornel/index5.html
+++ b/Cornel/index5.html
@@ -15,6 +15,13 @@
     Repeat your password:
     <input type = "password"/> 
 <br><br><br>
+Enter your gender:
+<br>
+Male
+<input name="btn" type = "radio"/>
+Female
+<input name="btn" type = "radio"/>
+<br><br>
     Please enter your skills:
     <br>
     Html
