--- a/kathi/exercise6.html
+++ b/kathi/exercise6.html
@@ -8,7 +8,39 @@
 </head>
 
 <body>
-
+    <table>
+        <tr>
+            <th>Morning</th>
+            <th>Day</th>
+            <th>Evening</th>
+        </tr>
+        <tr>
+            <td>
+                <ol>
+                    <li>Date</li>
+                    <li>Time</li>
+                    <li>Adress</li>
+                    <li>Notes</li>
+                </ol>
+            </td>
+            <td>
+                <ol>
+                    <li>Date</li>
+                    <li>Time</li>
+                    <li>Adress</li>
+                    <li>Notes</li>
+                </ol>
+            </td>
+            <td>
+                <ol>
+                    <li>Date</li>
+                    <li>Time</li>
+                    <li>Adress</li>
+                    <li>Notes</li>
+                </ol>
+            </td>
+        </tr>
+    </table>
 </body>
 
 </html>
